# MTGSim

./: CMakeLists.txt
src/: abilities.cpp  abilities.h  creaturestrength.cpp  creaturestrength.h  datatypes.h  enums.h  eventmanager.cpp  eventmanager.h  magiccard.cpp  magiccard.h  main.cpp  manacost.cpp  manacost.h  subscriber.h
